# mustory

./: .dockerignore  .gitignore  AGENTS.md  BACKGROUND_AUDIO_IMPLEMENTATION.md  Follow_Requirments.md  MIGRATION_RUNBOOK.md  README.md  REQUIREMENTS.md  Revenue_Requirements.md  UI_IMPROVEMENTS_SUMMARY.md  UPLOAD_IMPLEMENTATION_PROGRESS.md  mobile_ui_design.md
.claude/: settings.local.json
.github/workflows/: flutter_ci.yml
analytics/: README.md
apps/api/: .env.example  Dockerfile.worker  README.md  SUPABASE_RLS_SETUP.md  SUPABASE_SETUP.md  SUPABASE_SETUP_JA.md  alembic.ini  pyproject.toml  supabase_rls_policies.sql  test_r2_upload.py  test_supabase_auth.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 03fb9409bad7_add_job_id_to_track_model.py  202502181000_add_audio_features_columns.py  202511201200_add_profile_fields_to_users.py  202512011500_add_recommended_tracks_table.py  3af0db1955dd_add_liketrack_likestory_and_likecomment_.py  7b3ae6e6cb53_initial_schema_with_track_story_comment_.py  8c40e2d36e87_add_parent_comment_id_and_reply_count_.py  a202ab8ff2cb_add_follows_table.py  a4b234ae0229_add_view_count_to_tracks.py  c775ebd68aac_add_track_upload_and_processing_fields.py
apps/api/app/: main.py
apps/api/app/api/routes/: __init__.py  auth.py  comments.py  feed.py  profiles.py  stories.py  tracks.py
apps/api/app/core/: __init__.py  config.py  storage.py  supabase.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/dependencies/: auth.py  database.py  supabase_auth.py
apps/api/app/schemas/: comments.py  story.py  tracks.py
apps/api/app/services/: __init__.py  audio_analysis.py  queue.py  recommendations.py  worker.py
apps/api/scripts/: seed_test_data.py  seed_test_data.sql
apps/api/tests/: conftest.py  factories.py  test_audio_analysis.py  test_comments.py  test_follows.py  test_health.py  test_likes.py  test_stories.py  test_tracks.py  test_upload.py
apps/mobile/: .env.example  ENV_SETUP.md  ENV_SETUP_GUIDE.md  README.md  SETUP.md  SUPABASE_AUTH_SETUP.md  WINDOWS_SETUP.md  analysis_options.yaml  pubspec.yaml  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  (+3 more)
apps/worker/: README.md  pyproject.toml
apps/worker/src/mustory_worker/: __init__.py  main.py
apps/worker/tests/: test_main.py
docs/: BUILD_SUCCESS_REPORT.md  INTEGRATION_TEST_REPORT.md  SESSION_SUMMARY_2025-11-17.md  SNS_PROFILE_FOLLOW_PLAN.md  UI_REVIEW.md  UPLOAD_IMPLEMENTATION_PROGRESS.md
infra/: README.md  docker-compose.override.yml  docker-compose.yml
(+103 files in other folders)
