[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mustory-worker"
version = "0.1.0"
description = "FFmpeg conversion + notification worker for Mustory."
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9,<3.10",
  "redis>=5.0,<5.2",
  "ffmpeg-python>=0.2,<0.3",
  "pydantic>=2.9,<2.10",
  "tenacity>=9.0,<9.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.1,<0.7", "pytest>=8.3,<8.4"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/mustory_worker"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]
