[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mustory-worker"
version = "0.1.0"
description = "FFmpeg conversion + notification worker for Mustory."
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9,<3.10",
  "redis>=5.0,<5.2",
  "rq>=1.16,<2.0",
  "sqlalchemy>=2.0,<2.1",
  "psycopg[binary]>=3.2,<3.3",
  "ffmpeg-python>=0.2,<0.3",
  "boto3>=1.34,<2.0",
  "pydantic>=2.9,<2.10",
  "python-dotenv>=1.0,<2.0",
  "tenacity>=9.0,<9.1",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.1,<0.7", "pytest>=8.3,<8.4"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/mustory_worker"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]
